test/files/neg/t7877.check
t7877.scala:4: error: not found: value OnNext
  (null: Any) match {
              ^
t7877.scala:6: error: not found: value Y
    case Y() => ()             // not allowed
         ^
two errors found
